[package]
name = "wsconvert"
version = "0.5.0"
authors = ["Ian Chapman <ian@chapmip.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.2.0"
lazy_static = "1.4.0"
regex = "1.4.3"
log = "0.4.14"
env_logger = "0.8.3"
clap = "2.33.3"
